alter classname for a to prevent styling bleed

--- a/src/css/DropdownMenu.css
+++ b/src/css/DropdownMenu.css
@@ -14,7 +14,7 @@ ul {
   padding: 0;
 }
 
-a {
+dropdown__a {
   padding: 5px 10px;
   margin: 5px;
   text-decoration: none;
